20070614 disk/{plusd.{c,h},wd1770.{c,h}}: update author contact information
	 (plusd_20070609) (thanks, Fred) (Stuart).
20070615 utils.c: tweak Amiga temp dir path (part of patch #1712260)
         (Chris Young).
20070617 machine.c: refresh display on machine reset to ensure correct display
         as we don't always call machine_select() after loading a new snapshot
         (Fred).
20070617 fuse.c,man/fuse.1,settings.dat,utils.c: allow +D disk images to be
	 specified on command line or in the config file (includes patch
	 #1738602) (plusd_20070609) (Phil/Stuart).
20070617 ay.[ch],divide.[ch],fuse.c,if1.[ch],if2.[ch],joystick.[ch],Makefile.am,
	 machine.c,memory.[ch],module.[ch],printer.[ch],scld.[ch],snapshot.c,
	 trdos.[ch],ula.[ch],z80/{coretest.c,z80.[ch]},zxatasp.[ch],zxcf.[ch]:
	 more explicit modularisation (patch #1734120).
20070617 disk/plusd.{c,h}: +D modularisation fixes (plusd_20070609) (Stuart).
20070617 sound/coreaudiosound.c: correct initialisation of stereo output
         (Fred).
20070617 dck.c,divide.c,fuse.c,if1.c,if2.c,machine.[ch],menu_data.dat,
	 module.[ch],printer.c,scld.c,simpleide.[ch],snapshot.c,ui/gtk/gtkui.c,
	 widget/menu.c,z80/z80.[ch],zxatasp.c,zxcf.c: allow distinction between
	 "soft" resets (activing the reset line on the Z80) and "hard" resets
	 (pulling the power). Needed for DivIDE and +D.
20070617 disk/plusd.c: fix plusd_memory_map() and remove unused variable
	 (plusd_20070609) (Stuart).
20070617 disk/wd1770.h: fix typo in comment (plusd_20070609) (Stuart).
20070617 disk/plusd.c,machine.c: clear the +D RAM only upon a hard reset, and
	 perform a hard reset when selecting a machine (plusd_20070609)
	 (Stuart).
20070617 man/fuse.1,ui/win32/win32ui.c,z80/coretest.c: fix compilation of
	 coretest, document hard resets in the man page and fix the reset menu
	 option for the Win32 UI (Stuart).
20070617 merge plusd_20070609 branch into trunk (Stuart).
20070617 memory.c: remove unused #includes (Stuart).