@@ -121,6 +121,7 @@ int spec48_init( fuse_machine_info *machine )
   machine->timex = 0;
   machine->ram.port_contended        = spec48_port_contended;
   machine->ram.contend_delay	     = spec48_contend_delay;
+  machine->ram.contend_delay_no_mreq = spec48_contend_delay;
 
   machine->unattached_port = spec48_unattached_port;
 
