@@ -172,6 +172,13 @@ specplus3_contend_delay( libspectrum_dword time )
   return 0;	/* Shut gcc up */
 }
 
+libspectrum_byte
+specplus3_contend_delay_no_mreq( libspectrum_dword time )
+{
+  /* No contention if MREQ not active on the +2A/+3 */
+  return 0;
+}
+
 int specplus3_init( fuse_machine_info *machine )
 {
   machine->machine = LIBSPECTRUM_MACHINE_PLUS3;
@@ -182,6 +189,7 @@ int specplus3_init( fuse_machine_info *machine )
   machine->timex = 0;
   machine->ram.port_contended	     = specplus3_port_contended;
   machine->ram.contend_delay	     = specplus3_contend_delay;
+  machine->ram.contend_delay_no_mreq = specplus3_contend_delay_no_mreq;
 
   machine->unattached_port = specplus3_unattached_port;
 
