@@ -165,6 +165,7 @@ tc2068_init( fuse_machine_info *machine )
   machine->timex = 1;
   machine->ram.port_contended	     = tc2048_port_contended;
   machine->ram.contend_delay	     = tc2068_contend_delay;
+  machine->ram.contend_delay_no_mreq = tc2068_contend_delay;
 
   memset( fake_bank, 0xff, MEMORY_PAGE_SIZE );
 
