@@ -113,10 +113,22 @@
     tstates += ula_contention[ tstates ]; \
   tstates += (time);
 
+#define contend_read_no_mreq(address,time) \
+  if( memory_map_read[ (address) >> 13 ].contended ) \
+    tstates += ula_contention_no_mreq[ tstates ]; \
+  tstates += (time);
+
+#define contend_write_no_mreq(address,time) \
+  if( memory_map_write[ (address) >> 13 ].contended ) \
+    tstates += ula_contention_no_mreq[ tstates ]; \
+  tstates += (time);
+
 #else				/* #ifndef CORETEST */
 
 void contend_read( libspectrum_word address, libspectrum_dword time );
 void contend_write( libspectrum_word address, libspectrum_dword time );
+void contend_read_no_mreq( libspectrum_word address, libspectrum_dword time );
+void contend_write_no_mreq( libspectrum_word address, libspectrum_dword time );
 
 #endif				/* #ifndef CORETEST */
 
@@ -199,7 +211,7 @@ void contend_write( libspectrum_word address, libspectrum_dword time );
   libspectrum_byte calltempl, calltemph; \
   calltempl=readbyte(PC++);\
   calltemph=readbyte( PC ); \
-  contend_read( PC, 1 ); PC++;\
+  contend_read_no_mreq( PC, 1 ); PC++;\
   PUSH16(PCL,PCH);\
   PCL=calltempl; PCH=calltemph;\
 }
@@ -277,8 +289,9 @@ break
 #define JR()\
 {\
   libspectrum_signed_byte jrtemp = readbyte( PC ); \
-  contend_read( PC, 1 ); contend_read( PC, 1 ); contend_read( PC, 1 ); \
-  contend_read( PC, 1 ); contend_read( PC, 1 ); \
+  contend_read_no_mreq( PC, 1 ); contend_read_no_mreq( PC, 1 ); \
+  contend_read_no_mreq( PC, 1 ); contend_read_no_mreq( PC, 1 ); \
+  contend_read_no_mreq( PC, 1 ); \
   PC += jrtemp; \
 }
 
